# LinearAlgebraCourse

./: CMakeLists.txt
src/: exceptions.hpp  linear_system.cpp  main.cpp  matrix.cpp  matrix.hpp  vector.cpp  vector.hpp
src/tests/: line_tests.cpp  line_tests.hpp  linear_system_test.cpp  linear_system_test.hpp  matrix_tests.cpp  matrix_tests.h  plane_tests.cpp  plane_tests.hpp  unit_test_example.cpp  vector_tests.cpp  vector_tests.h
